Bug 305006 - Words crashes on pressing enter [@ KWViewModeNormal::documentToView]
Summary: Words crashes on pressing enter [@ KWViewModeNormal::documentToView]
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
: 305214 305767 308457 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-12 09:23 UTC by Gopalakrishna Bhat
Modified: 2012-11-05 08:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gopalakrishna Bhat 2012-08-12 09:23:06 UTC
Application: calligrawords (2.6 Pre-Alpha)
KDE Platform Version: 4.8.3 (4.8.3)
Qt Version: 4.8.2
Operating System: Linux 3.3.7-1-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
- What I was doing when the application crashed:

Opened a blank document and kept on pressing newline until Words crashed(approx for 10s)

The crash can be reproduced every time.

-- Backtrace:
Application: Calligra Words (calligrawords), signal: Aborted
Using host libthread_db library "/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f8502997780 (LWP 14306))]

Thread 2 (Thread 0x7f84e3bf9700 (LWP 14309)):
#0  0x00007f84fb9d106f in poll () from /lib/libc.so.6
#1  0x00007f84f4862774 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f84f4862894 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f84fc863b06 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007f84fc83463f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007f84fc8348c8 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007f84fc7386e0 in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007f84fc81503f in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007f84fc73b67b in ?? () from /usr/lib/libQtCore.so.4
#9  0x00007f84fc4abe0e in start_thread () from /lib/libpthread.so.0
#10 0x00007f84fb9d91ed in clone () from /lib/libc.so.6

Thread 1 (Thread 0x7f8502997780 (LWP 14306)):
[KCrash Handler]
#5  0x00007f84fb929c35 in raise () from /lib/libc.so.6
#6  0x00007f84fb92b0b8 in abort () from /lib/libc.so.6
#7  0x00007f84fc731254 in qt_message_output(QtMsgType, char const*) () from /usr/lib/libQtCore.so.4
#8  0x00007f84fc731408 in ?? () from /usr/lib/libQtCore.so.4
#9  0x00007f84fc731594 in qFatal(char const*, ...) () from /usr/lib/libQtCore.so.4
#10 0x00007f84ea2ee0a6 in KWViewModeNormal::documentToView (this=0x158c570, point=..., viewConverter=0x1450ee8) at /home/gk/kde/src/calligra/words/part/KWViewModeNormal.cpp:204
#11 0x00007f84ea2ec5e4 in KWViewMode::documentToView (this=0x158c570, rect=..., viewConverter=0x1450ee8) at /home/gk/kde/src/calligra/words/part/KWViewMode.cpp:40
#12 0x00007f84ea2c4e07 in KWCanvasBase::updateCanvas (this=0x1588768, rc=...) at /home/gk/kde/src/calligra/words/part/KWCanvasBase.cpp:697
#13 0x00007f85010a2def in KoShapeManager::update (this=0x1573980, rect=..., shape=0x1a6c0e0, selectionHandles=true) at /home/gk/kde/src/calligra/libs/flake/KoShapeManager.cpp:569
#14 0x00007f850108a475 in KoShape::update (this=0x1a6c0e0) at /home/gk/kde/src/calligra/libs/flake/KoShape.cpp:585
#15 0x00007f850109c3b0 in KoShapeContainer::update (this=0x1a6c0e0) at /home/gk/kde/src/calligra/libs/flake/KoShapeContainer.cpp:232
#16 0x00007f84e57e76ae in TextShape::update (this=0x1a6c0e0) at /home/gk/kde/src/calligra/plugins/textshape/TextShape.cpp:389
#17 0x00007f85010a0a61 in KoShapeManager::addShape (this=0x1573980, shape=0x1a6c0e0, repaint=KoShapeManager::PaintShapeOnAdd) at /home/gk/kde/src/calligra/libs/flake/KoShapeManager.cpp:230
#18 0x00007f85010a36e6 in KoShapeManager::qt_static_metacall (_o=0x1573980, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7fffda0d31a0) at /home/gk/kde/build/calligra/libs/flake/KoShapeManager.moc:68
#19 0x00007f84fc84adcf in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#20 0x00007f84ea2bb208 in KWDocument::shapeAdded (this=0xd14c30, _t1=0x1a6c0e0, _t2=KoShapeManager::AddWithoutRepaint) at /home/gk/kde/build/calligra/words/part/moc_KWDocument.cpp:153
#21 0x00007f84ea2cd11f in KWDocument::addFrame (this=0xd14c30, frame=0x19046d0) at /home/gk/kde/src/calligra/words/part/KWDocument.cpp:412
#22 0x00007f84ea2bafa5 in KWDocument::qt_static_metacall (_o=0xd14c30, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0x7fffda0d3400) at /home/gk/kde/build/calligra/words/part/moc_KWDocument.cpp:88
#23 0x00007f84fc84adcf in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#24 0x00007f84ea2bad45 in KWFrameSet::frameAdded (this=0x145ba60, _t1=0x19046d0) at /home/gk/kde/build/calligra/words/part/moc_KWFrameSet.cpp:101
#25 0x00007f84ea3142be in KWFrameSet::addFrame (this=0x145ba60, frame=0x19046d0) at /home/gk/kde/src/calligra/words/part/frames/KWFrameSet.cpp:68
#26 0x00007f84ea312b05 in KWFrame::KWFrame (this=0x19046d0, shape=0x1a6c0e0, parent=0x145ba60, anchor=0x0) at /home/gk/kde/src/calligra/words/part/frames/KWFrame.cpp:49
#27 0x00007f84ea30d8ba in KWFrameLayout::createNewFramesForPage (this=0xd14c78, pageNumber=2) at /home/gk/kde/src/calligra/words/part/frames/KWFrameLayout.cpp:186
#28 0x00007f84ea334305 in KWPageInsertCommand::redo (this=0x1935a10) at /home/gk/kde/src/calligra/words/part/commands/KWPageInsertCommand.cpp:108
#29 0x00007f84ea2cbd3c in KWDocument::insertPage (this=0xd14c30, afterPageNum=1, masterPageName=..., addUndoRedoCommand=false) at /home/gk/kde/src/calligra/words/part/KWDocument.cpp:234
#30 0x00007f84ea2cbe50 in KWDocument::appendPage (this=0xd14c30, masterPageName=..., addUndoRedoCommand=false) at /home/gk/kde/src/calligra/words/part/KWDocument.cpp:248
#31 0x00007f84ea30593b in KWRootAreaProvider::provideNext (this=0x145d930, documentLayout=0x145e470) at /home/gk/kde/src/calligra/words/part/KWRootAreaProvider.cpp:193
#32 0x00007f84ea3065a3 in KWRootAreaProvider::provide (this=0x145d930, documentLayout=0x145e470) at /home/gk/kde/src/calligra/words/part/KWRootAreaProvider.cpp:300
#33 0x00007f84fae6f6e5 in KoTextDocumentLayout::doLayout (this=0x145e470) at /home/gk/kde/src/calligra/libs/textlayout/KoTextDocumentLayout.cpp:732
#34 0x00007f84fae6eb30 in KoTextDocumentLayout::layout (this=0x145e470) at /home/gk/kde/src/calligra/libs/textlayout/KoTextDocumentLayout.cpp:608
#35 0x00007f84fae6fec4 in KoTextDocumentLayout::executeScheduledLayout (this=0x145e470) at /home/gk/kde/src/calligra/libs/textlayout/KoTextDocumentLayout.cpp:819
#36 0x00007f84fae70735 in KoTextDocumentLayout::qt_static_metacall (_o=0x145e470, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x15cd7c0) at /home/gk/kde/build/calligra/libs/textlayout/KoTextDocumentLayout.moc:66
#37 0x00007f84fc84a2ae in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#38 0x00007f84fd6eef7c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#39 0x00007f84fd6f33fa in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#40 0x00007f84fe40bfc6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#41 0x00007f84fc8358ee in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#42 0x00007f84fc839251 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQtCore.so.4
#43 0x00007f84fc863953 in ?? () from /usr/lib/libQtCore.so.4
#44 0x00007f84f48624a5 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#45 0x00007f84f48627d8 in ?? () from /usr/lib/libglib-2.0.so.0
#46 0x00007f84f4862894 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#47 0x00007f84fc863ae6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#48 0x00007f84fd78f2fe in ?? () from /usr/lib/libQtGui.so.4
#49 0x00007f84fc83463f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#50 0x00007f84fc8348c8 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#51 0x00007f84fc839568 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#52 0x00007f85025cf1d8 in kdemain (argc=1, argv=0x7fffda0d4ee8) at /home/gk/kde/src/calligra/words/part/main.cpp:43
#53 0x000000000040097e in main (argc=1, argv=0x7fffda0d4ee8) at /home/gk/kde/build/calligra/words/part/calligrawords_dummy.cpp:3

Reported using DrKonqi
Comment 1 Gopalakrishna Bhat 2012-08-31 15:44:30 UTC
*** Bug 305214 has been marked as a duplicate of this bug. ***
Comment 2 Gopalakrishna Bhat 2012-08-31 15:45:28 UTC
*** Bug 305767 has been marked as a duplicate of this bug. ***
Comment 3 Gopalakrishna Bhat 2012-11-04 09:30:55 UTC
*** Bug 308457 has been marked as a duplicate of this bug. ***
Comment 4 Camilla Boemann 2012-11-04 21:57:35 UTC
Git commit 59320c42cc068550e9d8842e6f2ab48f8563bab2 by C. Boemann.
Committed on 04/11/2012 at 22:38.
Pushed by boemann into branch 'master'.

Fix crash on inserting what amounts to a new page (either enough text or page break)

M  +1    -1    libs/flake/KoShapeManager.h
M  +2    -2    words/part/KWDocument.cpp
M  +1    -1    words/part/KWDocument.h
M  +1    -1    words/part/KWPart.cpp

http://commits.kde.org/calligra/59320c42cc068550e9d8842e6f2ab48f8563bab2
Comment 5 Camilla Boemann 2012-11-05 08:53:30 UTC
Git commit 9e648ce2504e6aa04031b8d7b7de39906f6ebd62 by C. Boemann.
Committed on 04/11/2012 at 22:38.
Pushed by boemann into branch 'calligra/2.6'.

Fix crash on inserting what amounts to a new page (either enough text or page break)

M  +1    -1    libs/flake/KoShapeManager.h
M  +2    -2    words/part/KWDocument.cpp
M  +1    -1    words/part/KWDocument.h
M  +1    -1    words/part/KWPart.cpp

http://commits.kde.org/calligra/9e648ce2504e6aa04031b8d7b7de39906f6ebd62