Fix crash on inserting what amounts to a new page (either enough text or page break)

BUG: 305006